fixing the left side overflow

--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ nav img {
       flex-direction: column;
       align-items: flex-start;
       text-align: right;
-      width: 99%;
+      width: 100%;
       
     }
 
@@ -307,6 +307,8 @@ nav img {
 
 
 
+/* MEDIA QUERIES  -/-----------------------------------------------------------------------------------------------------------------------------------------*/
+
 
 
 /* For Desktop*/
@@ -374,6 +376,7 @@ nav img {
   
   nav {
       margin-top: 0px;
+      width: 100%;
       display: flex;
       flex-direction: row;
       justify-content: space-around;
@@ -386,13 +389,13 @@ nav img {
 .overlay {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   position: relative;
   z-index: 0;
   top: 0;
   left: 0;
   background-color: white;
-  overflow-x:visible;
+  overflow-x:hidden;
   transition: 0.5s;
 }
 
@@ -432,7 +435,8 @@ nav img {
     top: 0px;
     left: 0px;
     width: 300px;
-    margin: 7.5px 0px 7.5px 95px;
+    margin: 7.5px 0px 7.5px 0px;
+    margin-left: 3.5%;
     font-size: 60px;
   }
 
@@ -503,11 +507,6 @@ i:hover {
 
 
 
-
-
-
-
-
 /* code for less than 360px and less than 300px */
 
 
@@ -548,10 +547,19 @@ i:hover {
     margin-left: 5px;
   }
   #search {
-    font-size: 28px;
+    font-size: 27px;
   }
   #menubutton {
     font-size: 27px;
   }
+  .suttom img {
+    width: 165px;
+  }
+}
 
+@media only screen and (max-width: 260px) {
+  .icons i {
+    margin-right: 0px;
+    margin-left: 0px;
+  }
 }
